# snake

./: CMakeLists.txt  main.cpp
.cache/clangd/index/: main.cpp.8A9FA6B6927099EF.idx  main.cpp.A09282D7DB7D2C09.idx
